# cpp-ultracam

./: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  UPGRADES  bootstrap  configure.ac  errors  pgplot_libs  warnings
doc/: Changes.html  Doxyfile.bak  Doxyfile.in  Errors.html  FAQ.html  GettingStarted.html  Makefile  Makefile.am  Makefile.in  Timing.html  UserInput.html  clear_modes.fig  docgen.in  docgen.pl  document.pl  guide.out  intro.doc  intro.in  reduce.red  sreduce.sre  ultracam_guide.out  ultracam_guide.tex  window_modes.fig
include/: Makefile  Makefile.am  Makefile.in  save  trm_aperture.h  trm_ccd.h  trm_ccd.h.old  trm_defect.h  trm_fdisk.h  trm_frame.h  trm_mccd.h  trm_reduce.h  trm_signal.h  trm_skyline.h  trm_specap.h  trm_spectrum.h  trm_target.h  trm_trace.h  trm_ultracam.h  trm_windata.h  trm_window.h
include/trm/: aperture.h  ccd.h  defect.h  fdisk.h  frame.h  mccd.h  reduce.h  skyline.h  specap.h  spectrum.h  target.h  trace.h  ultracam.h  ultracam_enums.h  windata.h  window.h
logs/: README  README_logs  SKIP_TARGETS  TARGETS  ULTRACAM_SKIP_TARGETS  ULTRACAM_TARGETS  ULTRASPEC_SKIP_TARGETS  ULTRASPEC_TARGETS  Ultra.py  check_target.html  check_target.php  copy_logs  copy_logs.py  copy_ultracam_logs  copy_ultracam_logs.py  copy_ultraspec_logs  copy_ultraspec_logs.py  help_data_type.html  index.html  index.php  make_dbase.py  make_json.py  make_log_dirs.py  make_logs.py  targets.js  ucomment.php  ucomment.py  ucomment_proc.py  ulogs.py  ultra.css  ultra_guide.js  ultra_logs.js  ultra_search.html  ultra_search.js  ultracam_ilogs.css  ultracam_index.html  ultracam_logs.css  ultracam_targets.html  ultraspec_index.html  ultraspec_index.php  (+2 more)
m4/: pgplot.m4
scripts/: Makefile  Makefile.am  Makefile.in  TARGETS  Ultra.py  addaframe.csh  averun.csh  binpic.pl  breakup.csh  busca2ucm.py  check_for_bad_data.csh  checkbias.py  clear_files.py  copymask.pl  debias.csh  dummy.pl  ederived.py  export.py  extinction.py  extract_times.csh  fdata.py  fixdata.py  flag_biases.py  fmatch.py  grb_alert.py  grms.py  hawki2ucm.py  help_data_type.html  hotpix.py  import_data.py  index_full.html  index_short.html  l3gain.pl  loggen.csh  make_dbase.py  make_derived_dirs.py  make_log_dirs.py  make_logs.py  make_stats.py  make_times.py  (+31 more)
src/: #Defect.cc#  #parseXML.cc#  Makefile.am  Makefile.in  WriteFunction.cc  WriteMemoryCallback.cc  addbad.cc  addfield.cc  addsky.cc  addspec.cc  aperture.cc  arith.cc  backsub.cc  badInput.cc  badgen.cc  bcrop.cc  boxavg.cc  boxmed.cc  carith.cc  ccd.cc  collapse.cc  combine.cc  covsrt.cc  crop.cc  cwin.cc  de_multiplex.cc  def_col.cc  defect.cc  diags.cc  dsub.cc  expand.cc  exptime.f  ext_nor.cc  extract_flux.cc  fdisk.cc  findpos.cc  fit_plot_profile.cc  fitgaussian.cc  fitmoffat.cc  fits2ucm.cc  (+90 more)
test/: tes.py
