## Process this file with automake to generate Makefile.in
##
## This is the file that must be edited if you are changing anything in the include directory

EXTRA_DIST = trm_aperture.h trm_ccd.h trm_defect.h trm_frame.h trm_mccd.h trm_reduce.h trm_target.h trm_skyline.h trm_spectrum.h \
trm_ultracam.h trm_windata.h trm_window.h Makefile.in trm_fdisk.h trm_specap.h trm_ultracam_enums.h


