## Process this file with automake to generate Makefile.in
##
## This is the file that must be edited if you are changing anything in the include directory

nobase_include_HEADERS = trm/aperture.h trm/ccd.h trm/defect.h trm/frame.h \
trm/mccd.h trm/reduce.h trm/target.h trm/skyline.h trm/spectrum.h \
trm/ultracam.h trm/windata.h trm/window.h trm/fdisk.h trm/specap.h \
trm/ultracam_enums.h trm/signal.h

