## Process this file with automake to generate Makefile.in

EXTRA_DIST = addaframe.csh averun.csh breakup.csh copymask.pl debias.csh dummy.pl extract_times.csh \
mulaframe.csh newreduce.pl shiftaper.pl sumframes.csh transform.pl ucat.csh uls.csh updateaper.pl splitr.pl \
makebias.csh ult2asc.pl setup.pl l3gain.pl fmatch.py ultracam.py unique.py missbias.py ulog2fits.py Ultra.py \
hotpix.py procbias.py busca2ucm.py pbias.py grms.py

progdir = @bindir@/@PACKAGE@

prog_SCRIPTS = addaframe.csh averun.csh breakup.csh copymask.pl debias.csh dummy.pl extract_times.csh \
mulaframe.csh newreduce.pl shiftaper.pl sumframes.csh transform.pl ucat.csh uls.csh updateaper.pl splitr.pl \
makebias.csh ult2asc.pl setup.pl l3gain.pl fmatch.py ultracam.py unique.py missbias.py ulog2fits.py \
hotpix.py procbias.py Ultra.py busca2ucm.py pbias.py grms.py




